--- a/.github/workflows/manual-cypress.yml
+++ b/.github/workflows/manual-cypress.yml
@@ -65,19 +65,22 @@ jobs:
           git add reports
           git commit -m "Add report from ${{ github.run_id }} at $(date)"
           git push origin gh-pages
-      - name: Notify Slack with Test Report
-        if: always() 
+
+
+  # Extract the report filename dynamically and send it to Slack
+      - name: Extract Report Filename
+        id: extract-report
+        run: |
+          # Find the latest generated HTML file (assuming only one report per run)
+          REPORT_FILE=$(ls cypress/reports/AI_Journey_Reports/ | grep -E '^AI_Journey_Test_Results_Report.*\.html$' | tail -n 1)
+          echo "Report filename is $REPORT_FILE"
+          echo "::set-output name=report_filename::$REPORT_FILE"
+
+
+  # Send the report link to Slack
+      - name: Send Slack Notification
+        if: success()
         run: |
           curl -X POST -H 'Content-type: application/json' \
-          --data '{
-            "text": "*✅ Cypress Test Report is Ready!*",
-            "attachments": [
-              {
-                "color": "#36a64f",
-                "title": "View HTML Report",
-                "title_link": "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/reports/AI_Journey_Test_Results_Report_${{ github.run_id }}.html",
-                "footer": "GitHub Actions",
-                "ts": '"$(date +%s)"'
-              }
-            ]
-          }' ${{ secrets.SLACK_WEBHOOK_URL }}
+          --data '{"text": "Cypress Test Run Completed! View the latest test report: https://git-user.github.io/Cypress_Typescript_AIJourney/reports/${{ steps.extract-report.outputs.report_filename }}"}' \
+          ${{ secrets.SLACK_WEBHOOK_URL }}
