--- a/.github/workflows/manual-cypress.yml
+++ b/.github/workflows/manual-cypress.yml
@@ -40,6 +40,14 @@ jobs:
           name: cypress-videos
           path: cypress/videos
 
+# Extract the report filename dynamically and send it to Slack
+      - name: Extract Report Filename
+        id: extract-report
+        run: |
+          REPORT_FILE=$(ls cypress/reports/AI_Journey_Reports/ | grep -E '^AI_Journey_Test_Results_Report.*\.html$' | tail -n 1)
+          echo "Report filename is $REPORT_FILE"
+          echo "report_filename=$REPORT_FILE" >> $GITHUB_OUTPUT
+
       - name: Upload Cypress Mochawesome HTML Report
         if: always()
         uses: actions/upload-artifact@v4
@@ -67,14 +75,8 @@ jobs:
           git push origin gh-pages
 
 
-  # Extract the report filename dynamically and send it to Slack
-      - name: Extract Report Filename
-        id: extract-report
-        run: |
-          # Find the latest generated HTML file (assuming only one report per run)
-          REPORT_FILE=$(ls cypress/reports/AI_Journey_Reports/ | grep -E '^AI_Journey_Test_Results_Report.*\.html$' | tail -n 1)
-          echo "Report filename is $REPORT_FILE"
-          echo "::set-output name=report_filename::$REPORT_FILE"
+  
+      
 
 
   # Send the report link to Slack
