--- a/.github/workflows/manual-cypress.yml
+++ b/.github/workflows/manual-cypress.yml
@@ -39,9 +39,13 @@ jobs:
         with:
           name: cypress-videos
           path: cypress/videos
+#debug step
+      - name: Debug Report Files
+        run: ls -la cypress/reports/AI_Journey_Reports
 
 # Extract the report filename dynamically and send it to Slack
       - name: Extract Report Filename
+        if: always()
         id: extract-report
         run: |
           REPORT_FILE=$(ls cypress/reports/AI_Journey_Reports/ | grep -E '^AI_Journey_Test_Results_Report.*\.html$' | tail -n 1)
