--- a/.github/workflows/manual-cypress.yml
+++ b/.github/workflows/manual-cypress.yml
@@ -80,18 +80,38 @@ jobs:
           git commit -m "Add report from ${{ github.run_id }} at $(date)"
           git push origin gh-pages
 
-      # Send Slack Notification
+        # Generate the index.html file to list all reports
+      - name: Generate index.html for Reports
+        run: |
+          REPORT_FILES=$(ls cypress/reports/AI_Journey_Reports/ | grep -E '^AI_Journey_Test_Results_Report.*\.html$')
+          echo "<!DOCTYPE html><html><head><title>Test Reports</title></head><body><h1>Cypress Test Reports</h1><ul>" > cypress/reports/AI_Journey_Reports/index.html
+          for file in $REPORT_FILES; do
+            echo "<li><a href='${file}'>Report - ${file}</a></li>" >> cypress/reports/AI_Journey_Reports/index.html
+          done
+          echo "</ul></body></html>" >> cypress/reports/AI_Journey_Reports/index.html
+
+      # Upload the index.html file to gh-pages
+      - name: Upload index.html to gh-pages
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git fetch
+          git switch gh-pages || git checkout --orphan gh-pages
+
+          mkdir -p reports
+          cp cypress/reports/AI_Journey_Reports/index.html reports/
+
+          git add reports/index.html
+          git commit -m "Update index.html with new test reports"
+          git push origin gh-pages
+
+      # Send Slack notification with the report URL
       - name: Send Slack Notification
         if: always()
         run: |
-          # Ensure the report filename is available
-          REPORT_FILE="${{ env.report_filename }}"
-          REPORT_URL="https://${GITHUB_ACTOR}.github.io/Cypress_Typescript_AIJourney/reports/${REPORT_FILE}"
-
-          # Print to make sure the URL is correct
-          echo "Full report URL: $REPORT_URL"
-
-          # Send the report URL to Slack
-          curl -X POST -H 'Content-type: application/json' \
-          --data "{\"text\": \"✅ Cypress Test Run Completed! View the latest test report: $REPORT_URL\"}" \
-          ${{ secrets.SLACK_WEBHOOK_URL }}
+              REPORT_FILE="${{ steps.extract-report.outputs.report_filename }}"
+              REPORT_URL="https://${{ github.actor }}.github.io/Cypress_Typescript_AIJourney/reports/${REPORT_FILE}"
+              echo "Full report URL: $REPORT_URL"
+              curl -X POST -H 'Content-type: application/json' \
+              --data "{\"text\": \"✅ Cypress Test Run Completed! View the latest test report: $REPORT_URL\"}" \
+              ${{ secrets.SLACK_WEBHOOK_URL }}
